--- a/TestNetwork.Network/TestNetwork.Server/TestNetwork.Server.csproj
+++ b/TestNetwork.Network/TestNetwork.Server/TestNetwork.Server.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NetworkServer.cs" />
+    <Compile Include="NetworkServerClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
