--- a/TestNetwork.Network/TestNetwork.Server/TestNetwork.Server.csproj
+++ b/TestNetwork.Network/TestNetwork.Server/TestNetwork.Server.csproj
@@ -49,6 +49,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TestNetwork.Network\TestNetwork.Network.csproj">
+      <Project>{ACE035AE-E129-43CA-86CE-EB0F68D1C282}</Project>
+      <Name>TestNetwork.Network</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="PacketHandlers\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
