--- a/TestNetwork.Network/TestNetwork.Network.Client/TestNetwork.Network.Client.csproj
+++ b/TestNetwork.Network/TestNetwork.Network.Client/TestNetwork.Network.Client.csproj
@@ -50,6 +50,8 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="NetworkClient.cs" />
+    <Compile Include="NetworkSession.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainForm.resx">
@@ -76,6 +78,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TestNetwork.Network\TestNetwork.Network.csproj">
+      <Project>{ACE035AE-E129-43CA-86CE-EB0F68D1C282}</Project>
+      <Name>TestNetwork.Network</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
